k8s/base/account.yaml
apiVersion: v1
kind: Service
metadata:
  name: account
spec:
  selector:
    app: account
  ports:
    - name: grpc
      port: 9100
      targetPort: 9100
    - name: web
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      serviceAccountName: telos-init
      containers:
        - name: account
          image: ghcr.io/OWNER/telos-account
          ports:
            - containerPort: 9100
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              memory: 256Mi
